# projeto-traduzo

./: .cspell.json  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  example.py  pyproject.toml  requirements.txt
src/: app.py  run_seeds.py
src/controllers/: admin_controller.py
src/database/: db.py  seed_language.py  seed_user.py
src/models/: abstract_model.py  history_model.py  language_model.py  user_model.py
src/views/static/css/: main.css
src/views/templates/: index.html
tests/: conftest.py  test_db.py
tests/controllers/: conftest.py  test_history_controller.py  test_translate_controller.py
tests/controllers/admin/: conftest.py  mocks.py  test_admin_controller.py  test_to_test_admin_controller.py
tests/models/: test_language_model.py
tests/models/history/: conftest.py  mocks.py  test_history_model.py  test_to_test_history_model.py
thunder-tests/: thunderActivity.json
