[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "traduzo"
version = "0.1.0"
description = "Relatório de estoques"
readme = "readme.md"
requires-python = ">=3.8"

[project.scripts]
ir = "traduzo.__main__:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --capture=fd"
accept_xfail = true
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
pythonpath = ["src"]
env = ["DB_NAME = test_db_traduzo"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
follow_imports = "silent"
show_column_numbers = true
strict = true
ignore_missing_imports = true
no_incremental = true

[[tool.mypy.overrides]]
module = ["tests.product.conftest", "tests.product_report.conftest"]
disable_error_code = "misc"

[project.optional-dependencies]
test = [
    "wheel==0.40.0",
    "factory-boy==3.2.1",
    "Faker==18.9.0",
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "pytest-json==0.4.0",
    "pytest-dependency@git+https://github.com/betrybe/pytest-dependency@311e45f9c512e89e6832f79047c6c29bc5a9b0f0"
]
alltest = [
    "traduzo[test]",
    "coverage==7.2.7",
    "iniconfig==2.0.0",
    "packaging==23.1",
    "pluggy==1.0.0",
    "python-dateutil==2.8.2",
    "six==1.16.0",
]
dev = [
    "traduzo[test]",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.3.0",
]
alldev = [
    "traduzo[dev]",
    "traduzo[alltest]",
    "click==8.1.3",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "pathspec==0.11.1",
    "platformdirs==3.5.1",
    "pycodestyle==2.10.0",
    "pyflakes==3.0.1",
    "typing_extensions==4.6.2",
]
